--- a/netlify.toml
+++ b/netlify.toml
@@ -24,3 +24,13 @@ status = 200
 from = "/monarch-invitation/*"
 to = "/.netlify/functions/universalRedirect"
 status = 200
+
+[[redirects]]
+from = "/monarch-invitation/*"
+to = "/.netlify/functions/universalRedirect"
+status = 200
+
+[[redirects]]
+from = "/X/*"
+to = "/.netlify/functions/createOGPage?route=:splat"
+status = 200
