BIG UPDATE: new navigation pages (tripview, console) and added top nav bar

--- a/netlify.toml
+++ b/netlify.toml
@@ -48,3 +48,13 @@ from = "/api/*"
 to = "/.netlify/functions/:splat"
 status = 200
 force = true
+
+[[redirects]]
+  from = "/discover"
+  to = "/pages/discover/discover.html"
+  status = 200
+
+  [[redirects]]
+  from = "/tripview"
+  to = "/pages/tripview/tripview.html"
+  status = 200
