--- a/netlify.toml
+++ b/netlify.toml
@@ -63,8 +63,10 @@ status = 200
   from = "/auth/*"
   to = "/auth/:splat"
   status = 200
+  force = true
 
 [[redirects]]
   from = "/auth/apple-callback"
   to = "/auth/apple-callback.html"
   status = 200
+  force = true
