Working on OG tag functionality for sharing links

--- a/netlify.toml
+++ b/netlify.toml
@@ -66,5 +66,9 @@ from = "/tripview"
 to = "/pages/tripview/tripview.html"
 status = 200
 
+[[redirects]]
+  from = "/share"
+  to = "/.netlify/functions/shareLink"
+  status = 200
 
 
